fix shifted items settings cards

--- a/style.css
+++ b/style.css
@@ -295,12 +295,12 @@ padding: 20px;
 
 .settings {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    gap: 30px;
+    gap:auto;
     text-align: center;
-    padding: 20px;
+    padding: 15px;
 }
 .container-theme{
     display: flex;
